--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #fcf5cc;
+  width: 100vw;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img{
+  width: 100%; /* 画像の幅を指定 */
+  max-height: auto;
 }
