--- a/frontend/src/components/molecules/Modal.css
+++ b/frontend/src/components/molecules/Modal.css
@@ -20,19 +20,21 @@
   position: relative;
   width: 80%;
   max-width: 500px;
+  margin: auto;
 }
 
-/* Close button */
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 5px 10px;
-  background-color: #f1f1f1;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.modal-flex{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  gap: 10px;
 }
+
+.form-flex{
+  display: flex;
+  flex-direction: column;
+}
+
 .close-button:hover {
   background-color: #ddd;
 }
