--- a/frontend/src/components/molecules/Slideshow.css
+++ b/frontend/src/components/molecules/Slideshow.css
@@ -3,13 +3,16 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 20px;
+    padding: 80px;
+    transform: translateY(-20%);
   }
   
-  img {
-    max-width: 100%;
-    max-height: 400px;
-    margin: 20px 0;
+.food-img {
+    max-width: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   .relative {
@@ -18,11 +21,14 @@
 
   .absolute{
     position: absolute;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
   
   button {
-    background-color: #007bff;
+    background-color:darkorange;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -30,9 +36,5 @@
     cursor: pointer;
     font-size: 16px;
     border-radius: 5px;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
   }
   
