[fix] CSS of Card

--- a/frontend/src/components/molecules/Card.css
+++ b/frontend/src/components/molecules/Card.css
@@ -16,4 +16,16 @@
 .Task_date{
     font-size: 12px;
     margin-top: 5px;
+    display: flex;
+}
+
+.start {
+    width: 45%;
+}
+
+.childa {
+    width: 10%;
+}
+.limit {
+    width: 45%;
 }
